--- a/Inventory/hosts.yaml
+++ b/Inventory/hosts.yaml
@@ -1,19 +1,18 @@
-host1::
+host1:
   groups:
-  - Firewall
+  - Firewalls
   hostname: 10.69.42.01
 host2:
   groups:
-  - Switch
+  - Switches
   hostname: 10.69.42.02
 host3:
   groups:
-  - Router
+  - Routers
   hostname: 10.69.42.03
 host4:
   groups:
-  - Firewall
-  - ASA_Context
+  - Firewalls
   hostname: 10.69.42.04
   password: encryptedPassword
   username: encryptedUsername
